<resources>
    <string name="app_name">Cacompagnon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_MP">MP</string>
    <string name="nav_login">Login</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_presence">Cacoprésences</string>

    <string name="cat_empty">Nothing to show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="placeholder_home">Home</string>
    <string name="placeholder_categories">Categories</string>
    <string name="placeholder_category">Category</string>
    <string name="placeholder_thread">Thread</string>
    <string name="placeholder_mplist">MP list</string>
    <string name="placeholder_presence">Cacoprésences</string>
</resources>
