<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_mp"
            android:icon="@drawable/ic_mail"
            android:title="@string/nav_MP" />
        <item
            android:id="@+id/nav_presence"
            android:icon="@drawable/ic_date_range"
            android:title="@string/nav_presence" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_account_box"
                android:title="@string/nav_login" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
